assets/stylesheets/blocs/_news.scss
.carousel {
    // height: 100%;
    width: 100%;
    overflow: visible;

    &.swiper-container {
        margin-top: -6rem;
        position: relative;
        list-style: none;
        z-index: 1;
    }

    .swiper-wrapper {
        position: relative;
        width: 100%;
        height: 100%;
        z-index: 1;
        display: flex;
        padding-top: 2rem;
        padding-bottom: 2rem;
        transition-property: transform;
        overflow-x: auto;
        overflow-y: hidden;

        @include tablet {
            overflow: none;
        }
    }

    .swiper-slide {
        height: 40rem;
        min-width: 30rem;
        transition-delay: 0.02s;

        @include tablet {
            height: 52rem;
            width: 32%;
            min-width: 30rem;
        }

        .card-article {
            height: 100%;
            z-index: 1;
            margin-left: 6rem;

            .card-article-link {
                cursor: pointer;
                color: inherit;
                display: block;
                height: 100%;
                position: relative;
                user-select: none;
                z-index: 10;

                &:hover .card-article-media img {
                    transform: scale(1);
                }

                &:active .card-article-media img {
                    transform: scale(1);
                }

                &:hover .card-article-media {
                    transform: scale(1.05);
                }

                &:active .card-article-media {
                    transform: scale(1.05);
                }

                &:hover .card-article-content img {
                    bottom: -0.5rem;
                    transform: scale(1.3);
                }

                .card-article-media, .card-article-media:after, .card-article-media img {
                    background: rgba(0,0,0,.4);
                    height: 100%;
                    width: 100%;
                    position: absolute;
                    left: 0;
                    top: 0;
                    object-fit: cover;
                    z-index: -1;
                }

                .card-article-media {
                    @include transition(transform, 1.5);
                    position: relative;
                    overflow: hidden;

                    &:after {
                        content: "";
                        background-image: linear-gradient(180deg, transparent 40%, rgba(0,0,0,.5));
                    }

                    img {
                        @include transition(transform, .7);
                        transform: scale(1.2);
                    }
                }

                .card-article-content {
                    display: flex;
                    justify-content: space-between;
                    flex-direction: column;
                    color: $white;
                    height: 100%;
                    width: 100%;
                    position: absolute;
                    left: 0;
                    top: 0;
                    padding: 4rem;
                    text-transform: uppercase;

                    .card-article-surtitle {
                        padding-top: 1.8rem;

                        &:before {
                            content: "";
                            background-color: $gray-5;
                            height: 2px;
                            position: absolute;
                            left: 4rem;
                            top: 4rem;
                            width: 100%;
                        }
                    }

                    .card-article-title {
                        display: flex;
                        align-items: flex-end;
                        justify-content: space-between;
                        margin-top: auto;
                        padding-right: 1em;
                        position: relative;
                    }

                    .card-article-arrow {
                        @include transition(all, 1.5);
                        position: absolute;
                        right: -0.1rem;
                        bottom: -0.1rem;
                        opacity: .8;
                    }
                }
            }
        }
    }
}

/*.swiper-container-android .swiper-slide, .swiper-wrapper {
    transform: translateZ(0);
}

.card-article-media {
    z-index: 1;
}*/

